order-form-v1.2/force-app/main/default/objects/Order_Form_Adobe_Settings__c/Order_Form_Adobe_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Adobe Acrobat Sign REST credentials for the Order Form signed write-back (signer-typed PO). Values are entered in the org, never in the repo. Blank key = PO form-data write-back is skipped silently.</description>
    <label>Order Form Adobe Settings</label>
</CustomObject>