order-form-v1.2/force-app/main/default/objects/Order_Form_Adobe_Settings__c/fields/API_Base_URI__c.field-meta.xml
<CustomField>
    <fullName>API_Base_URI__c</fullName>
    <description>Adobe API access point for the account, e.g. https://api.eu2.echosign.com/ (shown on the Adobe API Information page). Leave blank to discover it automatically via /baseUris.</description>
    <label>API Base URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>