order-form-v1.2/force-app/main/default/objects/Order_Form_Adobe_Settings__c/fields/Contributor_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Contributor_Template_Id__c</fullName>
    <inlineHelpText>18-character Id of the Contributor Order Form quote template in THIS org. When set, the stamp flow makes it the default document template on in-scope quotes that carry any contributor line (cross-sold subscription lines ride along). Blank = feature off.</inlineHelpText>
    <label>Contributor Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>