order-form-v1.2/force-app/main/default/objects/Order_Form_Adobe_Settings__c/fields/Default_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Template_Id__c</fullName>
    <inlineHelpText>18-character Id of the Subscription Order Form quote template in THIS org. When set, the stamp flow makes it the default document template on in-scope subs quotes (Generate pre-selects it). Blank = feature off.</inlineHelpText>
    <label>Default Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>