order-form-v1.2/force-app/main/default/objects/Order_Form_Adobe_Settings__c/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <description>Adobe Acrobat Sign integration key (Account Settings > Adobe Sign API > API Information > Integration Key, agreement_read scope). Used as a Bearer token for GET /agreements/{id}/formData.</description>
    <label>Integration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>